<resources>

    <string name="app_name">Android学习</string>
    <string name="WebViewActivity">Webview示例</string>
    <string name="PMActivity">PackageManager示例</string>
    <string name="HandlerActivity">Handler示例</string>
    <string name="SurfaceViewActivity">SurfaceView示例</string>
    <string name="ListViewActivity">ListViewActivity示例</string>
    <string name="TestCordovaActivity">TestCordovaActivity示例</string>
    <string name="TestWebViewClient">TestWebViewClient示例</string>
    <string name="StartOtherAppsByIntent">StartOtherAppsByIntent示例</string>
    <string name="NsdChatActivity">NsdChatActivity示例</string>
    <string name="JMDNSActivity">JMDNSActivity示例</string>
    <string name="AppFrameworkActivity">AppFrameworkActivity示例</string>
    <string name="DebugActivity">DebugActivity示例</string>

</resources>
